Initial working code
Initial working code

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Default Minimap Zoom
+author=YvesW
+support=https://github.com/YvesW/default-minimap-zoom
+description=Allows the user to set the default minimap zoom.
+tags=minimap,mini,map,zoom,default
+plugins=com.ywcode.defaultminimapzoom.DefaultMinimapZoomPlugin
